--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ html > body {
   width: calc(100% - 32px);
   height: calc(100% - 32px);
   background-color: rgba(0, 0, 0, 0.6);
-  border: 10px solid cyan;
+  border: 10px solid hsl(180, 100%, 30%);
   border-radius: 40px;
 }
 /*
@@ -59,7 +59,7 @@ LEFT Panel styles. Left panel are binary boxes and flashing boxes under logo (in
   height: calc(27% - calc(calc(2px + 2px + 3px) * 2));
   margin: 2px;
   padding: 2px;
-  border: 3px solid cyan;
+  border: 3px solid hsl(180, 100%, 30%);
   border-radius: 2px;
 }
 .left-panel > .binary-check-container > .binary-check > .binary-container {
@@ -77,7 +77,7 @@ LEFT Panel styles. Left panel are binary boxes and flashing boxes under logo (in
   margin: 2px;
   margin-left: 20px;
   padding: 2px;
-  border: 3px solid cyan;
+  border: 3px solid hsl(180, 100%, 30%);
   border-radius: 2px;
   color: white;
   overflow: hidden;
@@ -90,7 +90,7 @@ LEFT Panel styles. Left panel are binary boxes and flashing boxes under logo (in
   margin: 2px;
   margin-left: 1px;
   padding: 2px;
-  border: 3px solid cyan;
+  border: 3px solid hsl(180, 100%, 30%);
   border-radius: 2px;
 }
 .left-panel > .chevron-status {
@@ -104,7 +104,7 @@ LEFT Panel styles. Left panel are binary boxes and flashing boxes under logo (in
   margin-bottom: 20px;
   margin-top: 5px;
   padding: 2px;
-  border: 3px solid cyan;
+  border: 3px solid hsl(180, 100%, 30%);
   border-radius: 2px;
 }
 .left-panel > .chevron-status > .chevron-status-container > .chevron-status-box {
@@ -121,7 +121,7 @@ LEFT Panel styles. Left panel are binary boxes and flashing boxes under logo (in
   float: left;
   margin: 13px;
   margin-left: 25px;
-  border: 3px solid cyan;
+  border: 3px solid hsl(180, 100%, 30%);
 }
 .left-panel > .chevron-status > .chevron-status-container > .chevron-status-box > .chevron-status-text,
 .left-panel > .chevron-status > .chevron-status-container > .chevron-status-box .chevron-status-ok {
@@ -172,7 +172,83 @@ BOTTOM is auth code and footer of the page, user info etc.
   height: calc(100% - 93%);
   width: 100%;
   float: left;
-  background-color: rgba(0, 255, 255, 0.2);
+}
+.bottom > .bottom-left {
+  width: 45%;
+  float: left;
+}
+.bottom > .bottom-left > .title-auth {
+  padding-left: 15px;
+  font-size: 34px;
+  margin: 0;
+  color: white;
+  margin-top: -10px;
+}
+.bottom > .bottom-left > .character-border {
+  display: inline-block;
+  width: calc(100% - 15px);
+  margin-left: 15px;
+  margin-top: 5px;
+}
+.bottom > .bottom-left > .character-border span {
+  border-bottom: 2px solid hsl(180, 100%, 30%);
+  position: relative;
+  color: white;
+  display: block;
+  float: left;
+  font-size: 40px;
+  line-height: 25px;
+  padding: 6px 0.8% 5px 0.8%;
+}
+.bottom > .bottom-left > .character-border span::after {
+  content: ' ';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  /* Set the border height to half of the character height */
+  border-right: 2px solid hsl(180, 100%, 30%);
+  /* You can adjust the border color, style, and width as desired */
+}
+.bottom > .bottom-left > .character-border span:first-child {
+  border-left: 2px solid hsl(180, 100%, 30%);
+}
+.bottom > .bottom-left > .character-border span:last-child {
+  border-right: 2px solid hsl(180, 100%, 30%);
+}
+.bottom > .bottom-left > .character-border span:last-child::after {
+  border: none;
+}
+.bottom > .bottom-center {
+  width: calc(15% - 70px);
+  height: 100%;
+  float: left;
+  padding-left: 70px;
+}
+.bottom > .bottom-center > img {
+  max-height: 100%;
+  max-width: 100%;
+}
+.bottom > .bottom-center > img:hover {
+  background-color: hsl(180, 100%, 30%);
+  cursor: pointer;
+}
+.bottom > .bottom-right {
+  width: 40%;
+  float: left;
+  padding-top: 15px;
+}
+.bottom > .bottom-right > p {
+  color: white;
+  margin: 0;
+  font-size: 25px;
+  letter-spacing: 7px;
+  line-height: 23px;
+  padding-top: 0px;
+}
+.bottom > .bottom-right > p > span {
+  color: hsl(180, 100%, 30%);
 }
 /*
 Utils
