--- a/less/styles.less
+++ b/less/styles.less
@@ -3,7 +3,7 @@
     Author     : Woody41
 */
 
-@cyan: cyan;
+@cyan: hsla(180, 100%, 30%, 1);
 
 @main-height: 93%;
 @bottom-height: calc( 100% - @main-height);
@@ -61,7 +61,7 @@ LEFT Panel styles. Left panel are binary boxes and flashing boxes under logo (in
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center;
-                
+
                 border-radius: 100px; /* prevent background overflowing to cyan border*/
             }
             & > .flashing-box {
@@ -198,7 +198,82 @@ BOTTOM is auth code and footer of the page, user info etc.
     height: @bottom-height;
     width: 100%;
     float: left;
-    background-color: rgba(0,255,255,0.2);
+    & > .bottom-left {
+        width: 45%;
+        float: left;
+        & > .title-auth {
+            padding-left: 15px;
+            font-size: 34px;
+            margin: 0;
+            color: white;
+            margin-top: -10px;
+        }
+        & > .character-border {
+            display: inline-block;
+            width: calc( 100% - 15px);
+            margin-left: 15px;
+            margin-top: 5px;
+            span {
+                &::after {
+                    content: ' ';
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 50%; /* Set the border height to half of the character height */
+                    border-right: 2px solid @cyan; /* You can adjust the border color, style, and width as desired */
+                }
+                &:first-child {
+                    border-left: 2px solid @cyan;
+                }
+                &:last-child {
+                    border-right: 2px solid @cyan;
+                    &::after {
+                        border: none;
+                    }
+                }
+                border-bottom: 2px solid @cyan;
+
+                position: relative;
+                color: white;
+                display: block;
+                float: left;
+                font-size: 40px;
+                line-height: 25px;
+                padding: 6px 0.8% 5px 0.8%;
+            }
+        }
+    }
+    & > .bottom-center {
+        width: calc( 15% - 70px);
+        height: 100%;
+        float: left;
+        padding-left: 70px;
+        & > img {
+            max-height: 100%;
+            max-width: 100%;
+            &:hover {
+                background-color: @cyan;
+                cursor: pointer;
+            }
+        }
+    }
+    & > .bottom-right {
+        width: 40%;
+        float: left;
+        padding-top: 15px;
+        & > p {
+            color: white;
+            margin: 0;
+            font-size: 25px;
+            letter-spacing: 7px;
+            line-height: 23px;
+            padding-top: 0px;
+            & > span {
+                color: @cyan;
+            }
+        }
+    }
 }
 
 /*
