--- a/css/styles.css
+++ b/css/styles.css
@@ -258,4 +258,49 @@ Utils
   clear: both;
   display: table;
 }
+.flashing-box {
+  overflow: hidden;
+}
+.flashing-box > div {
+  -webkit-transition: background-color 200ms linear;
+  -ms-transition: background-color 200ms linear;
+  transition: background-color 200ms linear;
+}
+.flashing-box > div.type1 {
+  width: 10px;
+  height: 5px;
+}
+.flashing-box > div.type2 {
+  width: 5px;
+  height: 5px;
+}
+.flashing-box > div.type3 {
+  width: 5px;
+  height: 10px;
+  background-color: blue;
+}
+.flashing-box > div.pos1 {
+  margin: 5px;
+  margin-left: 5px;
+}
+.flashing-box > div.pos2 {
+  margin: 5px;
+  margin-left: 10px;
+}
+.flashing-box > div.pos3 {
+  margin: 5px;
+  margin-left: 15px;
+}
+.flashing-box > div.color1.light {
+  background-color: #81ecec;
+}
+.flashing-box > div.color1.dark {
+  background-color: rgba(129, 236, 236, 0.5);
+}
+.flashing-box > div.color2.light {
+  background-color: #ffeaa7;
+}
+.flashing-box > div.color2.dark {
+  background-color: rgba(255, 234, 167, 0.5);
+}
 /*# sourceMappingURL=styles.css.map */
