--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,50 @@ RIGHT Panel are chevron boxes
   float: left;
   background-color: rgba(255, 0, 255, 0.2);
 }
+.right-panel > .character-border {
+  display: inline-block;
+  width: calc(100% - 15px);
+  margin-left: 15px;
+  margin-top: 15px;
+}
+.right-panel > .character-border span {
+  border-top: 2px solid hsl(180, 100%, 30%);
+  position: relative;
+  color: white;
+  display: block;
+  float: left;
+  font-size: 40px;
+  line-height: 25px;
+  padding: 10px;
+}
+.right-panel > .character-border span::after {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  /* Set the border height to half of the character height */
+  border-right: 2px solid hsl(180, 100%, 30%);
+  /* You can adjust the border color, style, and width as desired */
+}
+.right-panel > .character-border span:first-child {
+  border-left: 2px solid hsl(180, 100%, 30%);
+}
+.right-panel > .character-border span:last-of-type {
+  border-right: 2px solid hsl(180, 100%, 30%);
+}
+.right-panel > .character-border span:last-of-type::after {
+  border: none;
+}
+.right-panel > .character-border > .destination-text {
+  text-align: right;
+  padding-right: 30px;
+  padding-top: 25px;
+  letter-spacing: 2px;
+  font-size: 32px;
+  color: white;
+}
 /*
 BOTTOM is auth code and footer of the page, user info etc.
 */
