--- a/less/styles.less
+++ b/less/styles.less
@@ -190,6 +190,49 @@ RIGHT Panel are chevron boxes
     width: 17%;
     float: left;
     background-color: rgba(255,0,255,0.2);
+    & > .character-border {
+        display: inline-block;
+        width: calc( 100% - 15px);
+        margin-left: 15px;
+        margin-top: 15px;
+        span {
+            &::after {
+                content: ' ';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 50%; /* Set the border height to half of the character height */
+                border-right: 2px solid @cyan; /* You can adjust the border color, style, and width as desired */
+            }
+            &:first-child {
+                border-left: 2px solid @cyan;
+            }
+            &:last-of-type {
+                border-right: 2px solid @cyan;
+                &::after {
+                    border: none;
+                }
+            }
+            border-top: 2px solid @cyan;
+
+            position: relative;
+            color: white;
+            display: block;
+            float: left;
+            font-size: 40px;
+            line-height: 25px;
+            padding: 10px;
+        }
+        & > .destination-text {
+            text-align: right;
+            padding-right: 30px;
+            padding-top: 25px;
+            letter-spacing: 2px;   
+            font-size: 32px;
+            color: white;
+        }
+    }
 }
 /*
 BOTTOM is auth code and footer of the page, user info etc.
